cabal-version:      2.4
name:               scheme48
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Ridho Pratama
maintainer:         p.ridho@yahoo.co.id

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules: 
        Language.Scheme48.Parser
        , Language.Scheme48.AST
    build-depends:
        base ^>=4.13.0.0
        , megaparsec ^>= 9.0.1
        , text ^>= 1.2.4.0

    hs-source-dirs:   src
    default-language: Haskell2010


executable scheme48
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.13.0.0
        , scheme48
        , text ^>= 1.2.4.0

    hs-source-dirs:   app
    default-language: Haskell2010
